<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_background">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/header_padding"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_gallery_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_back_to_studio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_back_to_studio"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/back_to_studio"
            android:textColor="@color/white"
            app:strokeColor="@color/brand_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/grid_spacing"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toBottomOf="@id/gallery_header"
        tools:listitem="@layout/item_gallery" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_header" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_saved_images"
        android:textColor="@color/brand_text_secondary"
        android:textSize="@dimen/text_size_body"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_header" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/grid_spacing"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_settings"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_sign_in"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_sign_up"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_gallery"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_privacy"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/footer_btn_terms"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
